tests/snapshots/formats__pyc__filly.cpython-311.pyc.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ filly.cpython-311.pyc — Python 3.11 byte-compiled, from filly.py  [0x0+0x5fd]
  ▾ Header  [0x0+0x10]
      magic: 3495 — Python 3.11  [0x0+0x2]
      \r\n: 0d 0a  |..|  [0x2+0x2]
      flags: 0x0 []  [0x4+0x4]
      mtime: 2026-10-05 23:57:00 UTC  [0x8+0x4]
      source_size: 461  [0xc+0x4]
  ▾ Code: "code object <module>" — filly.py:1, code bytes[148], consts tuple[19]  [0x10+0x5ed]
      co_argcount: 0  [0x11+0x4]
      co_posonlyargcount: 0  [0x15+0x4]
      co_kwonlyargcount: 0  [0x19+0x4]
      co_stacksize: 8  [0x1d+0x4]
      co_flags: 0x0 []  [0x21+0x4]
      co_code: 97 00 64 00 5a 00 64 01 64 02 6c 01 5a 01 64 03 …  |..d.Z.d.d.l.Z.d.| — 148 bytes  [0x25+0x99]
    ▾ co_consts: "tuple of 19" — "A tiny module for fixture generation.", 0, None, "hello, pyc", 1, 2.5, (3+4j), 2  [0xbe+0x428]
        [0]: "A tiny module for fixture generation."  [0xc0+0x27]
        [1]: 0  [0xe7+0x5]
        [2]: "None"  [0xec+0x1]
        [3]: "hello, pyc"  [0xed+0xc]
        [4]: 1  [0xf9+0x5]
        [5]: 2.5  [0xfe+0x9]
        [6]: "(3+4j)"  [0x107+0x11]
        [7]: 2  [0x118+0x5]
        [8]: 70  [0x11d+0x5]
        [9]: -7  [0x122+0x5]
        [10]: true  [0x127+0x1]
        [11]: 72 61 77  |raw| — 3 bytes  [0x128+0x8]
        [12]: "a"  [0x130+0x3]
        [13]: "b"  [0x133+0x3]
      ▾ [14]: "code object Foal" — filly.py:9, code bytes[32], consts tuple[7]  [0x136+0x23a]
          co_argcount: 0  [0x137+0x4]
          co_posonlyargcount: 0  [0x13b+0x4]
          co_kwonlyargcount: 0  [0x13f+0x4]
          co_stacksize: 2  [0x143+0x4]
          co_flags: 0x0 []  [0x147+0x4]
          co_code: 97 00 65 00 5a 01 64 00 5a 02 64 01 5a 03 64 02 …  |..e.Z.d.Z.d.Z.d.| — 32 bytes  [0x14b+0x25]
        ▾ co_consts: "tuple of 7" — "Foal", 4, <code __init__>, 2, <code neigh>, None, tuple[1]  [0x170+0x16a]
            [0]: "Foal"  [0x172+0x6]
            [1]: 4  [0x178+0x5]
          ▾ [2]: "code object __init__" — filly.py:12, code bytes[20], consts tuple[1]  [0x17d+0x8b]
              co_argcount: 2  [0x17e+0x4]
              co_posonlyargcount: 0  [0x182+0x4]
              co_kwonlyargcount: 0  [0x186+0x4]
              co_stacksize: 2  [0x18a+0x4]
              co_flags: 0x3 [OPTIMIZED | NEWLOCALS]  [0x18e+0x4]
              co_code: 97 00 7c 01 7c 00 5f 00 00 00 00 00 00 00 00 00 …  |..|.|._.........| — 20 bytes  [0x192+0x19]
            ▾ co_consts: "tuple of 1" — None  [0x1ab+0x3]
                [0]: "None"  [0x1ad+0x1]
            ▾ co_names: "tuple of 1" — "name"  [0x1ae+0x8]
                [0]: "name"  [0x1b0+0x6]
            ▾ co_localsplusnames: "tuple of 2" — "self", "name"  [0x1b6+0xd]
                [0]: "self"  [0x1b8+0x6]
                [1]: "→ ref 12" — "name"  [0x1be+0x5]
              co_localspluskinds: 20 20  |  | — 2 bytes  [0x1c3+0x7]
              co_filename: "filly.py"  [0x1ca+0xa]
              co_name: "__init__"  [0x1d4+0xa]
              co_qualname: "Foal.__init__"  [0x1de+0xf]
              co_firstlineno: 12  [0x1ed+0x4]
              co_linetable: 80 00 d8 14 18 88 04 8c 09 88 09 88 09  |.............| — 13 bytes  [0x1f1+0x12]
              co_exceptiontable:   || — 0 bytes  [0x203+0x5]
            [3]: "→ ref 4" — 2  [0x208+0x5]
          ▾ [4]: "code object neigh" — filly.py:15, code bytes[58], consts tuple[4]  [0x20d+0xc5]
              co_argcount: 2  [0x20e+0x4]
              co_posonlyargcount: 0  [0x212+0x4]
              co_kwonlyargcount: 0  [0x216+0x4]
              co_stacksize: 4  [0x21a+0x4]
              co_flags: 0x3 [OPTIMIZED | NEWLOCALS]  [0x21e+0x4]
              co_code: 97 00 64 01 a0 00 00 00 00 00 00 00 00 00 00 00 …  |..d.............| — 58 bytes  [0x222+0x3f]
            ▾ co_consts: "tuple of 4" — None, " ", "neigh", "!"  [0x261+0x10]
                [0]: "None"  [0x263+0x1]
                [1]: " "  [0x264+0x3]
                [2]: "neigh"  [0x267+0x7]
                [3]: "!"  [0x26e+0x3]
            ▾ co_names: "tuple of 1" — "join"  [0x271+0x8]
                [0]: "join"  [0x273+0x6]
            ▾ co_localsplusnames: "tuple of 2" — "self", "times"  [0x279+0xe]
                [0]: "→ ref 13" — "self"  [0x27b+0x5]
                [1]: "times"  [0x280+0x7]
              co_localspluskinds: 20 20  |  | — 2 bytes  [0x287+0x7]
              co_filename: "→ ref 14" — "filly.py"  [0x28e+0x5]
              co_name: "→ ref 19" — "neigh"  [0x293+0x5]
              co_qualname: "Foal.neigh"  [0x298+0xc]
              co_firstlineno: 15  [0x2a4+0x4]
              co_linetable: 80 00 d8 0f 12 8f 78 8a 78 98 17 98 09 a0 45 d1 …  |......x.x.....E.| — 32 bytes  [0x2a8+0x25]
              co_exceptiontable: "→ ref 16" — bytes[0]  [0x2cd+0x5]
            [5]: "None"  [0x2d2+0x1]
          ▾ [6]: "tuple of 1" — 2  [0x2d3+0x7]
              [0]: "→ ref 4" — 2  [0x2d5+0x5]
        ▾ co_names: "tuple of 6" — "__name__", "__module__", "__qualname__", "legs", "__init__", "neigh"  [0x2da+0x36]
            [0]: "__name__"  [0x2dc+0xa]
            [1]: "__module__"  [0x2e6+0xc]
            [2]: "__qualname__"  [0x2f2+0xe]
            [3]: "legs"  [0x300+0x6]
            [4]: "→ ref 15" — "__init__"  [0x306+0x5]
            [5]: "→ ref 19" — "neigh"  [0x30b+0x5]
          co_localsplusnames: "tuple of 0"  [0x310+0x2]
          co_localspluskinds: "→ ref 16" — bytes[0]  [0x312+0x5]
          co_filename: "→ ref 14" — "filly.py"  [0x317+0x5]
          co_name: "→ ref 9" — "Foal"  [0x31c+0x5]
          co_qualname: "→ ref 9" — "Foal"  [0x321+0x5]
          co_firstlineno: 9  [0x326+0x4]
          co_linetable: 80 00 80 00 80 00 80 00 80 00 d8 0b 0c 80 44 f0 …  |..............D.| — 60 bytes  [0x32a+0x41]
          co_exceptiontable: "→ ref 16" — bytes[0]  [0x36b+0x5]
        [15]: "→ ref 9" — "Foal"  [0x370+0x5]
      ▾ [16]: "code object fib" — filly.py:19, code bytes[66], consts tuple[2]  [0x375+0xe0]
          co_argcount: 1  [0x376+0x4]
          co_posonlyargcount: 0  [0x37a+0x4]
          co_kwonlyargcount: 0  [0x37e+0x4]
          co_stacksize: 4  [0x382+0x4]
          co_flags: 0x3 [OPTIMIZED | NEWLOCALS]  [0x386+0x4]
          co_code: 97 00 64 01 5c 02 00 00 7d 01 7d 02 74 01 00 00 …  |..d.\...}.}.t...| — 66 bytes  [0x38a+0x47]
        ▾ co_consts: "tuple of 2" — None, tuple[2]  [0x3d1+0xf]
            [0]: "None"  [0x3d3+0x1]
          ▾ [1]: "tuple of 2" — 0, 1  [0x3d4+0xc]
              [0]: "→ ref 2" — 0  [0x3d6+0x5]
              [1]: "→ ref 3" — 1  [0x3db+0x5]
        ▾ co_names: "tuple of 1" — "range"  [0x3e0+0x9]
            [0]: "range"  [0x3e2+0x7]
        ▾ co_localsplusnames: "tuple of 4" — "n", "a", "b", "_"  [0x3e9+0x12]
            [0]: "n"  [0x3eb+0x3]
            [1]: "→ ref 6" — "a"  [0x3ee+0x5]
            [2]: "→ ref 7" — "b"  [0x3f3+0x5]
            [3]: "_"  [0x3f8+0x3]
          co_localspluskinds: 20 20 20 20  |    | — 4 bytes  [0x3fb+0x9]
          co_filename: "→ ref 14" — "filly.py"  [0x404+0x5]
          co_name: "fib"  [0x409+0x5]
          co_qualname: "→ ref 32" — "fib"  [0x40e+0x5]
          co_firstlineno: 19  [0x413+0x4]
          co_linetable: 80 00 d8 0b 0f 81 44 80 41 80 71 dd 0d 12 90 31 …  |......D.A.q....1| — 52 bytes  [0x417+0x39]
          co_exceptiontable: "→ ref 16" — bytes[0]  [0x450+0x5]
      ▾ [17]: "code object <listcomp>" — filly.py:26, code bytes[24], consts tuple[0]  [0x455+0x8c]
          co_argcount: 1  [0x456+0x4]
          co_posonlyargcount: 0  [0x45a+0x4]
          co_kwonlyargcount: 0  [0x45e+0x4]
          co_stacksize: 4  [0x462+0x4]
          co_flags: 0x3 [OPTIMIZED | NEWLOCALS]  [0x466+0x4]
          co_code: 97 00 67 00 7c 00 5d 07 7d 01 7c 01 7c 01 7a 05 …  |..g.|.].}.|.|.z.| — 24 bytes  [0x46a+0x1d]
          co_consts: "→ ref 27" — tuple[0]  [0x487+0x5]
          co_names: "→ ref 27" — tuple[0]  [0x48c+0x5]
        ▾ co_localsplusnames: "tuple of 2" — ".0", "x"  [0x491+0x9]
            [0]: ".0"  [0x493+0x4]
            [1]: "x"  [0x497+0x3]
          co_localspluskinds: 20 20  |  | — 2 bytes  [0x49a+0x7]
          co_filename: "→ ref 14" — "filly.py"  [0x4a1+0x5]
          co_name: "<listcomp>"  [0x4a6+0xc]
          co_qualname: "→ ref 36" — "<listcomp>"  [0x4b2+0x5]
          co_firstlineno: 26  [0x4b7+0x4]
          co_linetable: 80 00 d0 0a 23 d0 0a 23 d0 0a 23 90 51 88 31 88 …  |....#..#..#.Q.1.| — 28 bytes  [0x4bb+0x21]
          co_exceptiontable: "→ ref 16" — bytes[0]  [0x4dc+0x5]
        [18]: 5  [0x4e1+0x5]
    ▾ co_names: "tuple of 10" — "__doc__", "os", "GREETING", "NUMBERS", "frozenset", "LOOKUP", "Foal", "fib"  [0x4e6+0x4d]
        [0]: "__doc__"  [0x4e8+0x9]
        [1]: "os"  [0x4f1+0x4]
        [2]: "GREETING"  [0x4f5+0xa]
        [3]: "NUMBERS"  [0x4ff+0x9]
        [4]: "frozenset"  [0x508+0xb]
        [5]: "LOOKUP"  [0x513+0x8]
        [6]: "→ ref 9" — "Foal"  [0x51b+0x5]
        [7]: "→ ref 32" — "fib"  [0x520+0x5]
        [8]: "→ ref 29" — "range"  [0x525+0x5]
        [9]: "squares"  [0x52a+0x9]
      co_localsplusnames: "→ ref 27" — tuple[0]  [0x533+0x5]
      co_localspluskinds: "→ ref 16" — bytes[0]  [0x538+0x5]
      co_filename: "→ ref 14" — "filly.py"  [0x53d+0x5]
      co_name: "<module>"  [0x542+0xa]
      co_qualname: "→ ref 45" — "<module>"  [0x54c+0x5]
      co_firstlineno: 1  [0x551+0x4]
      co_linetable: f0 03 01 01 01 d8 00 2b d0 00 2b d8 00 09 80 09 …  |.......+..+.....| — 158 bytes  [0x555+0xa3]
      co_exceptiontable: "→ ref 16" — bytes[0]  [0x5f8+0x5]
