tests/snapshots/formats__pyc__filly.cpython-314.pyc.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ filly.cpython-314.pyc — Python 3.14 byte-compiled, from filly.py  [0x0+0x55c]
  ▾ Header  [0x0+0x10]
      magic: 3627 — Python 3.14  [0x0+0x2]
      \r\n: 0d 0a  |..|  [0x2+0x2]
      flags: 0x0 []  [0x4+0x4]
      mtime: 2026-10-05 23:57:00 UTC  [0x8+0x4]
      source_size: 461  [0xc+0x4]
  ▾ Code: "code object <module>" — filly.py:1, code bytes[172], consts tuple[13]  [0x10+0x54c]
      co_argcount: 0  [0x11+0x4]
      co_posonlyargcount: 0  [0x15+0x4]
      co_kwonlyargcount: 0  [0x19+0x4]
      co_stacksize: 8  [0x1d+0x4]
      co_flags: 0x0 []  [0x21+0x4]
      co_code: 80 00 52 00 74 00 5e 00 52 01 49 01 74 01 52 02 …  |..R.t.^.R.I.t.R.| — 172 bytes  [0x25+0xb1]
    ▾ co_consts: "tuple of 13" — "A tiny module for fixture generation.", None, "hello, pyc", 2.5, True, bytes[3], "a", "b"  [0xd6+0x39f]
        [0]: "A tiny module for fixture generation."  [0xd8+0x27]
        [1]: "None"  [0xff+0x1]
        [2]: "hello, pyc"  [0x100+0xc]
        [3]: 2.5  [0x10c+0x9]
        [4]: true  [0x115+0x1]
        [5]: 72 61 77  |raw| — 3 bytes  [0x116+0x8]
        [6]: "a"  [0x11e+0x3]
        [7]: "b"  [0x121+0x3]
      ▾ [8]: "code object Foal" — filly.py:9, code bytes[52], consts tuple[6]  [0x124+0x26d]
          co_argcount: 0  [0x125+0x4]
          co_posonlyargcount: 0  [0x129+0x4]
          co_kwonlyargcount: 0  [0x12d+0x4]
          co_stacksize: 2  [0x131+0x4]
          co_flags: 0x0 []  [0x135+0x4]
          co_code: 61 00 80 00 5d 00 74 01 52 00 74 02 5e 09 74 03 …  |a...].t.R.t.^.t.| — 52 bytes  [0x139+0x39]
        ▾ co_consts: "tuple of 6" — "Foal", <code __init__>, <code neigh>, tuple[1], None, tuple[1]  [0x172+0x161]
            [0]: "Foal"  [0x174+0x6]
          ▾ [1]: "code object __init__" — filly.py:12, code bytes[18], consts tuple[1]  [0x17a+0x83]
              co_argcount: 2  [0x17b+0x4]
              co_posonlyargcount: 0  [0x17f+0x4]
              co_kwonlyargcount: 0  [0x183+0x4]
              co_stacksize: 2  [0x187+0x4]
              co_flags: 0x8000003 [OPTIMIZED | NEWLOCALS | 0x8000000]  [0x18b+0x4]
              co_code: 80 00 57 10 6e 00 00 00 00 00 00 00 00 00 52 00 …  |..W.n.........R.| — 18 bytes  [0x18f+0x17]
            ▾ co_consts: "tuple of 1" — None  [0x1a6+0x3]
                [0]: "None"  [0x1a8+0x1]
            ▾ co_names: "tuple of 1" — "name"  [0x1a9+0x8]
                [0]: "name"  [0x1ab+0x6]
            ▾ co_localsplusnames: "tuple of 2" — "self", "name"  [0x1b1+0xd]
                [0]: "self"  [0x1b3+0x6]
                [1]: "→ ref 8" — "name"  [0x1b9+0x5]
              co_localspluskinds: 26 26  |&&| — 2 bytes  [0x1be+0x7]
              co_filename: "filly.py"  [0x1c5+0xa]
              co_name: "__init__"  [0x1cf+0xa]
              co_qualname: "Foal.__init__"  [0x1d9+0xf]
              co_firstlineno: 12  [0x1e8+0x4]
              co_linetable: 80 00 d8 14 18 8e 09  |.......| — 7 bytes  [0x1ec+0xc]
              co_exceptiontable:   || — 0 bytes  [0x1f8+0x5]
          ▾ [2]: "code object neigh" — filly.py:15, code bytes[66], consts tuple[3]  [0x1fd+0xc9]
              co_argcount: 2  [0x1fe+0x4]
              co_posonlyargcount: 0  [0x202+0x4]
              co_kwonlyargcount: 0  [0x206+0x4]
              co_stacksize: 4  [0x20a+0x4]
              co_flags: 0x8000003 [OPTIMIZED | NEWLOCALS | 0x8000000]  [0x20e+0x4]
              co_code: 80 00 52 00 50 01 00 00 00 00 00 00 00 00 00 00 …  |..R.P...........| — 66 bytes  [0x212+0x47]
            ▾ co_consts: "tuple of 3" — " ", "neigh", "!"  [0x259+0xf]
                [0]: " "  [0x25b+0x3]
                [1]: "neigh"  [0x25e+0x7]
                [2]: "!"  [0x265+0x3]
            ▾ co_names: "tuple of 1" — "join"  [0x268+0x8]
                [0]: "join"  [0x26a+0x6]
            ▾ co_localsplusnames: "tuple of 2" — "self", "times"  [0x270+0xe]
                [0]: "→ ref 9" — "self"  [0x272+0x5]
                [1]: "times"  [0x277+0x7]
              co_localspluskinds: 26 26  |&&| — 2 bytes  [0x27e+0x7]
              co_filename: "→ ref 10" — "filly.py"  [0x285+0x5]
              co_name: "→ ref 16" — "neigh"  [0x28a+0x5]
              co_qualname: "Foal.neigh"  [0x28f+0xc]
              co_firstlineno: 15  [0x29b+0x4]
              co_linetable: 80 00 d8 0f 12 8f 78 89 78 98 17 98 09 a0 45 d5 …  |......x.x.....E.| — 29 bytes  [0x29f+0x22]
              co_exceptiontable: "→ ref 13" — bytes[0]  [0x2c1+0x5]
            [3]: "→ ref 7" — tuple[1]  [0x2c6+0x5]
            [4]: "None"  [0x2cb+0x1]
          ▾ [5]: "tuple of 1" — 2  [0x2cc+0x7]
              [0]: 2  [0x2ce+0x5]
        ▾ co_names: "tuple of 9" — "__name__", "__module__", "__qualname__", "__firstlineno__", "legs", "__init__", "neigh", "__static_…  [0x2d3+0x71]
            [0]: "__name__"  [0x2d5+0xa]
            [1]: "__module__"  [0x2df+0xc]
            [2]: "__qualname__"  [0x2eb+0xe]
            [3]: "__firstlineno__"  [0x2f9+0x11]
            [4]: "legs"  [0x30a+0x6]
            [5]: "→ ref 11" — "__init__"  [0x310+0x5]
            [6]: "→ ref 16" — "neigh"  [0x315+0x5]
            [7]: "__static_attributes__"  [0x31a+0x17]
            [8]: "__classdictcell__"  [0x331+0x13]
        ▾ co_localsplusnames: "tuple of 1" — "__classdict__"  [0x344+0x11]
            [0]: "__classdict__"  [0x346+0xf]
          co_localspluskinds: 40  |@| — 1 bytes  [0x355+0x6]
          co_filename: "→ ref 10" — "filly.py"  [0x35b+0x5]
          co_name: "→ ref 5" — "Foal"  [0x360+0x5]
          co_qualname: "→ ref 5" — "Foal"  [0x365+0x5]
          co_firstlineno: 9  [0x36a+0x4]
          co_linetable: f8 87 00 80 00 d8 0b 0c 80 44 f2 04 01 05 19 f7 …  |.........D......| — 25 bytes  [0x36e+0x1e]
          co_exceptiontable: "→ ref 13" — bytes[0]  [0x38c+0x5]
        [9]: "→ ref 5" — "Foal"  [0x391+0x5]
      ▾ [10]: "code object fib" — filly.py:19, code bytes[66], consts tuple[1]  [0x396+0xc9]
          co_argcount: 1  [0x397+0x4]
          co_posonlyargcount: 0  [0x39b+0x4]
          co_kwonlyargcount: 0  [0x39f+0x4]
          co_stacksize: 4  [0x3a3+0x4]
          co_flags: 0x3 [OPTIMIZED | NEWLOCALS]  [0x3a7+0x4]
          co_code: 80 00 5e 00 5e 01 72 21 5c 01 00 00 00 00 00 00 …  |..^.^.r!\.......| — 66 bytes  [0x3ab+0x47]
        ▾ co_consts: "tuple of 1" — 0  [0x3f2+0x7]
            [0]: 0  [0x3f4+0x5]
        ▾ co_names: "tuple of 1" — "range"  [0x3f9+0x9]
            [0]: "range"  [0x3fb+0x7]
        ▾ co_localsplusnames: "tuple of 4" — "n", "a", "b", "_"  [0x402+0x12]
            [0]: "n"  [0x404+0x3]
            [1]: "→ ref 2" — "a"  [0x407+0x5]
            [2]: "→ ref 3" — "b"  [0x40c+0x5]
            [3]: "_"  [0x411+0x3]
          co_localspluskinds: 26 20 20 20  |&   | — 4 bytes  [0x414+0x9]
          co_filename: "→ ref 10" — "filly.py"  [0x41d+0x5]
          co_name: "fib"  [0x422+0x5]
          co_qualname: "→ ref 35" — "fib"  [0x427+0x5]
          co_firstlineno: 19  [0x42c+0x4]
          co_linetable: 80 00 d8 0b 0c 88 61 80 71 dc 0d 12 90 31 8e 58 …  |......a.q....1.X| — 37 bytes  [0x430+0x2a]
          co_exceptiontable: "→ ref 13" — bytes[0]  [0x45a+0x5]
        [11]: "(3+4j)"  [0x45f+0x11]
        [12]: -7  [0x470+0x5]
    ▾ co_names: "tuple of 10" — "__doc__", "os", "GREETING", "NUMBERS", "frozenset", "LOOKUP", "Foal", "fib"  [0x475+0x4d]
        [0]: "__doc__"  [0x477+0x9]
        [1]: "os"  [0x480+0x4]
        [2]: "GREETING"  [0x484+0xa]
        [3]: "NUMBERS"  [0x48e+0x9]
        [4]: "frozenset"  [0x497+0xb]
        [5]: "LOOKUP"  [0x4a2+0x8]
        [6]: "→ ref 5" — "Foal"  [0x4aa+0x5]
        [7]: "→ ref 35" — "fib"  [0x4af+0x5]
        [8]: "→ ref 32" — "range"  [0x4b4+0x5]
        [9]: "squares"  [0x4b9+0x9]
    ▾ co_localsplusnames: "tuple of 1" — "x"  [0x4c2+0x5]
        [0]: "x"  [0x4c4+0x3]
      co_localspluskinds: 30  |0| — 1 bytes  [0x4c7+0x6]
      co_filename: "→ ref 10" — "filly.py"  [0x4cd+0x5]
      co_name: "<module>"  [0x4d2+0xa]
      co_qualname: "→ ref 44" — "<module>"  [0x4dc+0x5]
      co_firstlineno: 1  [0x4e1+0x4]
      co_linetable: f0 03 01 01 01 d9 00 2b db 00 09 e0 0b 17 80 08 …  |.......+........| — 104 bytes  [0x4e5+0x6d]
      co_exceptiontable: bb 11 41 11 04  |..A..| — 5 bytes  [0x552+0xa]
