tests/snapshots/formats__pyc__filly.cpython-39.pyc.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ filly.cpython-39.pyc — Python 3.9 byte-compiled, from filly.py  [0x0+0x44a]
  ▾ Header  [0x0+0x10]
      magic: 3425 — Python 3.9  [0x0+0x2]
      \r\n: 0d 0a  |..|  [0x2+0x2]
      flags: 0x0 []  [0x4+0x4]
      mtime: 2026-10-05 23:57:00 UTC  [0x8+0x4]
      source_size: 461  [0xc+0x4]
  ▾ Code: "code object <module>" — filly.py:1, code bytes[96], consts tuple[21]  [0x10+0x43a]
      co_argcount: 0  [0x11+0x4]
      co_posonlyargcount: 0  [0x15+0x4]
      co_kwonlyargcount: 0  [0x19+0x4]
      co_nlocals: 0  [0x1d+0x4]
      co_stacksize: 8  [0x21+0x4]
      co_flags: 0x40 [NOFREE]  [0x25+0x4]
      co_code: 64 00 5a 00 64 01 64 02 6c 01 5a 01 64 03 5a 02 …  |d.Z.d.d.l.Z.d.Z.| — 96 bytes  [0x29+0x65]
    ▾ co_consts: "tuple of 21" — "A tiny module for fixture generation.", 0, None, "hello, pyc", 1, 2.5, (3+4j), 2  [0x8e+0x33a]
        [0]: "A tiny module for fixture generation."  [0x90+0x27]
        [1]: 0  [0xb7+0x5]
        [2]: "None"  [0xbc+0x1]
        [3]: "hello, pyc"  [0xbd+0xc]
        [4]: 1  [0xc9+0x5]
        [5]: 2.5  [0xce+0x9]
        [6]: "(3+4j)"  [0xd7+0x11]
        [7]: 2  [0xe8+0x5]
        [8]: 70  [0xed+0x5]
        [9]: -7  [0xf2+0x5]
        [10]: true  [0xf7+0x1]
        [11]: 72 61 77  |raw| — 3 bytes  [0xf8+0x8]
        [12]: "a"  [0x100+0x3]
        [13]: "b"  [0x103+0x3]
      ▾ [14]: "code object Foal" — filly.py:9, code bytes[34], consts tuple[9]  [0x106+0x1b0]
          co_argcount: 0  [0x107+0x4]
          co_posonlyargcount: 0  [0x10b+0x4]
          co_kwonlyargcount: 0  [0x10f+0x4]
          co_nlocals: 0  [0x113+0x4]
          co_stacksize: 3  [0x117+0x4]
          co_flags: 0x40 [NOFREE]  [0x11b+0x4]
          co_code: 65 00 5a 01 64 00 5a 02 64 01 5a 03 64 02 64 03 …  |e.Z.d.Z.d.Z.d.d.| — 34 bytes  [0x11f+0x27]
        ▾ co_consts: "tuple of 9" — "Foal", 4, <code __init__>, "Foal.__init__", 2, <code neigh>, "Foal.neigh", None  [0x146+0x112]
            [0]: "Foal"  [0x148+0x6]
            [1]: 4  [0x14e+0x5]
          ▾ [2]: "code object __init__" — filly.py:12, code bytes[10], consts tuple[1]  [0x153+0x66]
              co_argcount: 2  [0x154+0x4]
              co_posonlyargcount: 0  [0x158+0x4]
              co_kwonlyargcount: 0  [0x15c+0x4]
              co_nlocals: 2  [0x160+0x4]
              co_stacksize: 2  [0x164+0x4]
              co_flags: 0x43 [OPTIMIZED | NEWLOCALS | NOFREE]  [0x168+0x4]
              co_code: 7c 01 7c 00 5f 00 64 00 53 00  ||.|._.d.S.| — 10 bytes  [0x16c+0xf]
            ▾ co_consts: "tuple of 1" — None  [0x17b+0x3]
                [0]: "None"  [0x17d+0x1]
            ▾ co_names: "tuple of 1" — "name"  [0x17e+0x8]
                [0]: "name"  [0x180+0x6]
            ▾ co_varnames: "tuple of 2" — "self", "name"  [0x186+0xd]
                [0]: "self"  [0x188+0x6]
                [1]: "→ ref 9" — "name"  [0x18e+0x5]
              co_freevars: "tuple of 0"  [0x193+0x2]
              co_cellvars: "→ ref 11" — tuple[0]  [0x195+0x5]
              co_filename: "filly.py"  [0x19a+0xa]
              co_name: "__init__"  [0x1a4+0xa]
              co_firstlineno: 12  [0x1ae+0x4]
              co_lnotab: 00 01  |..| — 2 bytes  [0x1b2+0x7]
            [3]: "Foal.__init__"  [0x1b9+0xf]
            [4]: "→ ref 3" — 2  [0x1c8+0x5]
          ▾ [5]: "code object neigh" — filly.py:15, code bytes[20], consts tuple[4]  [0x1cd+0x77]
              co_argcount: 2  [0x1ce+0x4]
              co_posonlyargcount: 0  [0x1d2+0x4]
              co_kwonlyargcount: 0  [0x1d6+0x4]
              co_nlocals: 2  [0x1da+0x4]
              co_stacksize: 4  [0x1de+0x4]
              co_flags: 0x43 [OPTIMIZED | NEWLOCALS | NOFREE]  [0x1e2+0x4]
              co_code: 64 01 a0 00 64 02 67 01 7c 01 14 00 a1 01 64 03 …  |d...d.g.|.....d.| — 20 bytes  [0x1e6+0x19]
            ▾ co_consts: "tuple of 4" — None, " ", "neigh", "!"  [0x1ff+0x10]
                [0]: "None"  [0x201+0x1]
                [1]: " "  [0x202+0x3]
                [2]: "neigh"  [0x205+0x7]
                [3]: "!"  [0x20c+0x3]
            ▾ co_names: "tuple of 1" — "join"  [0x20f+0x8]
                [0]: "join"  [0x211+0x6]
            ▾ co_varnames: "tuple of 2" — "self", "times"  [0x217+0xe]
                [0]: "→ ref 10" — "self"  [0x219+0x5]
                [1]: "times"  [0x21e+0x7]
              co_freevars: "→ ref 11" — tuple[0]  [0x225+0x5]
              co_cellvars: "→ ref 11" — tuple[0]  [0x22a+0x5]
              co_filename: "→ ref 12" — "filly.py"  [0x22f+0x5]
              co_name: "→ ref 15" — "neigh"  [0x234+0x5]
              co_firstlineno: 15  [0x239+0x4]
              co_lnotab: 00 01  |..| — 2 bytes  [0x23d+0x7]
            [6]: "Foal.neigh"  [0x244+0xc]
            [7]: "None"  [0x250+0x1]
          ▾ [8]: "tuple of 1" — 2  [0x251+0x7]
              [0]: "→ ref 3" — 2  [0x253+0x5]
        ▾ co_names: "tuple of 6" — "__name__", "__module__", "__qualname__", "legs", "__init__", "neigh"  [0x258+0x36]
            [0]: "__name__"  [0x25a+0xa]
            [1]: "__module__"  [0x264+0xc]
            [2]: "__qualname__"  [0x270+0xe]
            [3]: "legs"  [0x27e+0x6]
            [4]: "→ ref 13" — "__init__"  [0x284+0x5]
            [5]: "→ ref 15" — "neigh"  [0x289+0x5]
          co_varnames: "→ ref 11" — tuple[0]  [0x28e+0x5]
          co_freevars: "→ ref 11" — tuple[0]  [0x293+0x5]
          co_cellvars: "→ ref 11" — tuple[0]  [0x298+0x5]
          co_filename: "→ ref 12" — "filly.py"  [0x29d+0x5]
          co_name: "→ ref 7" — "Foal"  [0x2a2+0x5]
          co_firstlineno: 9  [0x2a7+0x4]
          co_lnotab: 08 01 04 02 08 03  |......| — 6 bytes  [0x2ab+0xb]
        [15]: "→ ref 7" — "Foal"  [0x2b6+0x5]
      ▾ [16]: "code object fib" — filly.py:19, code bytes[40], consts tuple[2]  [0x2bb+0x95]
          co_argcount: 1  [0x2bc+0x4]
          co_posonlyargcount: 0  [0x2c0+0x4]
          co_kwonlyargcount: 0  [0x2c4+0x4]
          co_nlocals: 4  [0x2c8+0x4]
          co_stacksize: 4  [0x2cc+0x4]
          co_flags: 0x43 [OPTIMIZED | NEWLOCALS | NOFREE]  [0x2d0+0x4]
          co_code: 64 01 5c 02 7d 01 7d 02 74 00 7c 00 83 01 44 00 …  |d.\.}.}.t.|...D.| — 40 bytes  [0x2d4+0x2d]
        ▾ co_consts: "tuple of 2" — None, tuple[2]  [0x301+0xf]
            [0]: "None"  [0x303+0x1]
          ▾ [1]: "tuple of 2" — 0, 1  [0x304+0xc]
              [0]: "→ ref 1" — 0  [0x306+0x5]
              [1]: "→ ref 2" — 1  [0x30b+0x5]
        ▾ co_names: "tuple of 1" — "range"  [0x310+0x9]
            [0]: "range"  [0x312+0x7]
        ▾ co_varnames: "tuple of 4" — "n", "a", "b", "_"  [0x319+0x12]
            [0]: "n"  [0x31b+0x3]
            [1]: "→ ref 5" — "a"  [0x31e+0x5]
            [2]: "→ ref 6" — "b"  [0x323+0x5]
            [3]: "_"  [0x328+0x3]
          co_freevars: "→ ref 11" — tuple[0]  [0x32b+0x5]
          co_cellvars: "→ ref 11" — tuple[0]  [0x330+0x5]
          co_filename: "→ ref 12" — "filly.py"  [0x335+0x5]
          co_name: "fib"  [0x33a+0x5]
          co_firstlineno: 19  [0x33f+0x4]
          co_lnotab: 00 01 08 01 0c 01 10 01  |........| — 8 bytes  [0x343+0xd]
        [17]: "→ ref 25" — "fib"  [0x350+0x5]
      ▾ [18]: "code object <listcomp>" — filly.py:26, code bytes[20], consts tuple[0]  [0x355+0x69]
          co_argcount: 1  [0x356+0x4]
          co_posonlyargcount: 0  [0x35a+0x4]
          co_kwonlyargcount: 0  [0x35e+0x4]
          co_nlocals: 2  [0x362+0x4]
          co_stacksize: 4  [0x366+0x4]
          co_flags: 0x43 [OPTIMIZED | NEWLOCALS | NOFREE]  [0x36a+0x4]
          co_code: 67 00 7c 00 5d 0c 7d 01 7c 01 7c 01 14 00 91 02 …  |g.|.].}.|.|.....| — 20 bytes  [0x36e+0x19]
          co_consts: "→ ref 11" — tuple[0]  [0x387+0x5]
          co_names: "→ ref 11" — tuple[0]  [0x38c+0x5]
        ▾ co_varnames: "tuple of 2" — ".0", "x"  [0x391+0x9]
            [0]: ".0"  [0x393+0x4]
            [1]: "x"  [0x397+0x3]
          co_freevars: "→ ref 11" — tuple[0]  [0x39a+0x5]
          co_cellvars: "→ ref 11" — tuple[0]  [0x39f+0x5]
          co_filename: "→ ref 12" — "filly.py"  [0x3a4+0x5]
          co_name: "<listcomp>"  [0x3a9+0xc]
          co_firstlineno: 26  [0x3b5+0x4]
          co_lnotab:   || — 0 bytes  [0x3b9+0x5]
        [19]: "→ ref 28" — "<listcomp>"  [0x3be+0x5]
        [20]: 5  [0x3c3+0x5]
    ▾ co_names: "tuple of 10" — "__doc__", "os", "GREETING", "NUMBERS", "frozenset", "LOOKUP", "Foal", "fib"  [0x3c8+0x4d]
        [0]: "__doc__"  [0x3ca+0x9]
        [1]: "os"  [0x3d3+0x4]
        [2]: "GREETING"  [0x3d7+0xa]
        [3]: "NUMBERS"  [0x3e1+0x9]
        [4]: "frozenset"  [0x3ea+0xb]
        [5]: "LOOKUP"  [0x3f5+0x8]
        [6]: "→ ref 7" — "Foal"  [0x3fd+0x5]
        [7]: "→ ref 25" — "fib"  [0x402+0x5]
        [8]: "→ ref 22" — "range"  [0x407+0x5]
        [9]: "squares"  [0x40c+0x9]
      co_varnames: "→ ref 11" — tuple[0]  [0x415+0x5]
      co_freevars: "→ ref 11" — tuple[0]  [0x41a+0x5]
      co_cellvars: "→ ref 11" — tuple[0]  [0x41f+0x5]
      co_filename: "→ ref 12" — "filly.py"  [0x424+0x5]
      co_name: "<module>"  [0x429+0xa]
      co_firstlineno: 1  [0x433+0x4]
      co_lnotab: 04 01 08 02 04 01 18 01 0c 03 0e 0a 08 07  |..............| — 14 bytes  [0x437+0x13]
