tests/snapshots/formats__pyc__legacy.pyc.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ legacy.pyc — Python 2.7 byte-compiled, from legacy.py  [0x0+0xf3]
  ▾ Header  [0x0+0x8]
      magic: 62211 — Python 2.7  [0x0+0x2]
      \r\n: 0d 0a  |..|  [0x2+0x2]
      mtime: 2017-07-14 02:40:00 UTC  [0x4+0x4]
  ▾ Code: "code object <module>" — legacy.py:1, code bytes[6], consts tuple[5]  [0x8+0xeb]
      co_argcount: 0  [0x9+0x4]
      co_nlocals: 0  [0xd+0x4]
      co_stacksize: 2  [0x11+0x4]
      co_flags: 0x40 [NOFREE]  [0x15+0x4]
      co_code: 64 00 00 84 00 00  |d.....| — 6 bytes  [0x19+0xb]
    ▾ co_consts: "tuple of 5" — <code inc>, None, "hello, 2.7", -3221291009, 0.5  [0x24+0x8d]
      ▾ [0]: "code object inc" — legacy.py:3, code bytes[8], consts tuple[2]  [0x29+0x64]
          co_argcount: 1  [0x2a+0x4]
          co_nlocals: 1  [0x2e+0x4]
          co_stacksize: 2  [0x32+0x4]
          co_flags: 0x43 [OPTIMIZED | NEWLOCALS | NOFREE]  [0x36+0x4]
          co_code: 7c 00 00 64 01 00 17 53  ||..d...S| — 8 bytes  [0x3a+0xd]
        ▾ co_consts: "tuple of 2" — None, 1  [0x47+0xb]
            [0]: "None"  [0x4c+0x1]
            [1]: 1  [0x4d+0x5]
          co_names: "tuple of 0"  [0x52+0x5]
        ▾ co_varnames: "tuple of 1" — "x"  [0x57+0xb]
            [0]: "x"  [0x5c+0x6]
          co_freevars: "tuple of 0"  [0x62+0x5]
          co_cellvars: "tuple of 0"  [0x67+0x5]
          co_filename: "legacy.py"  [0x6c+0xe]
          co_name: "inc"  [0x7a+0x8]
          co_firstlineno: 3  [0x82+0x4]
          co_lnotab: 00 01  |..| — 2 bytes  [0x86+0x7]
        [1]: "None"  [0x8d+0x1]
        [2]: "hello, 2.7"  [0x8e+0xf]
        [3]: "-3221291009"  [0x9d+0xb]
        [4]: 0.5  [0xa8+0x9]
    ▾ co_names: "tuple of 1" — "inc"  [0xb1+0xd]
        [0]: "inc"  [0xb6+0x8]
      co_varnames: "tuple of 0"  [0xbe+0x5]
      co_freevars: "tuple of 0"  [0xc3+0x5]
      co_cellvars: "tuple of 0"  [0xc8+0x5]
      co_filename: "legacy.py"  [0xcd+0xe]
      co_name: "<module>"  [0xdb+0xd]
      co_firstlineno: 1  [0xe8+0x4]
      co_lnotab: 00 01  |..| — 2 bytes  [0xec+0x7]
